Casi terminar frontend

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap");
+
 *,
 *::after,
 *::before {
@@ -7,5 +9,37 @@
 }
 
 :root {
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
+  background: linear-gradient(to right, #00b09b, #96c93d);
+  background: linear-gradient(to right, #cac531, #f3f9a7);
+  background: linear-gradient(to right, #74ebd5, #acb6e5);
+  background: linear-gradient(to right, #22c1c3, #fdbb2d);
+  background: linear-gradient(to right, #ff9966, #ff5e62);
+
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
+li {
+  list-style: none;
+}
+
+h2 {
+  font-weight: 400;
+}
+
+.scrollableContainer {
+  overflow-y: auto;
+  flex-basis: 0;
+  flex-grow: 1;
+}
+
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
 }
