--- a/ui/src/components/layout/Layout.module.css
+++ b/ui/src/components/layout/Layout.module.css
@@ -33,5 +33,10 @@
   justify-content: space-between;
 }
 
-.sideBarTop {
+.logoutButton {
+  padding: 0.2em 0.4em;
+}
+
+.logoutButton:hover {
+  cursor: pointer;
 }
